Added media queries 2

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ p {
 @media (max-width: 538px) {
   .primary-link {
     text-align: center;
+    display: block;
   }
   p {
     display: none;
