--- a/style.css
+++ b/style.css
@@ -100,11 +100,17 @@ p {
   color: white;
 }
 @media (max-width: 538px) {
+  h1 {
+    font-size: 64px;
+  }
+  h2 {
+    font-size: 36px;
+  }
   .primary-link {
     text-align: center;
     display: block;
   }
-  p {
+  .img-fluid {
     display: none;
   }
 }
