--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ p {
   h2 {
     font-size: 36px;
   }
+
+  h3 {
+    font-size: 18px;
+  }
   .primary-link {
     text-align: center;
     display: block;
